aws/wordpress/terraform/wordpress.tf
provider "aws" {
   access_key = "${var.access_key}"
   secret_key = "${var.secret_key}"
   region     = "${var.region}"
}

resource "aws_instance" "example" {
   ami           = "ami-bf4193c7"
   instance_type = "t2.micro"
}
