aws/wordpress/terraform/sg.tf
# Public HTTP access for ELB
resource "aws_security_group" "web_elb_sg" {
  name        = "web_elb_sg"
  description = "Allows public HTTP inbound traffic"
  vpc_id      = "${aws_vpc.main.id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "web_elb_asg"
  }
}

# Private HTTP access and SSH from anywhere for web instances
resource "aws_security_group" "web_sg" {
    name        = "web_sg"
    description = "Allow public SSH and private HTTP inbound traffic"
    vpc_id      = "${aws_vpc.main.id}"

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["${aws_vpc.main.cidr_block}"]
    }

    egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags {
        Name = "web_sg"
    }
}

# SSH and RDS access for db instances
resource "aws_security_group" "db_sg" {
    name        = "db_sg"
    description = "Allow private RDS and public SSH inbound traffic"
    vpc_id      = "${aws_vpc.main.id}"

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = 3306
        to_port     = 3306
        protocol    = "tcp"
        cidr_blocks = ["${aws_vpc.main.cidr_block}"]
    }

    egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags {
        Name = "db_sg"
    }
}

# NFS access for efs instances
resource "aws_security_group" "efs_sg" {
    name        = "efs_sg"
    description = "Allow private NFS traffic"
    vpc_id      = "${aws_vpc.main.id}"

    ingress {
        from_port   = 2049
        to_port     = 2049
        protocol    = "tcp"
        cidr_blocks = ["${aws_vpc.main.cidr_block}"]
    }

    egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags {
        Name = "efs_sg"
    }
}

# Access for Redis instances
resource "aws_security_group" "redis_sg" {
    name        = "redis_sg"
    description = "Allow private Redis traffic"
    vpc_id      = "${aws_vpc.main.id}"

    ingress {
        from_port   = 6379
        to_port     = 6379
        protocol    = "tcp"
        cidr_blocks = ["${aws_vpc.main.cidr_block}"]
    }

    egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags {
        Name = "redis_sg"
    }
}
